# RK2

./: CMakeLists.txt  CPack.cmake
.github/workflows/: CI.yml  Cpack.yml  test.yml
tests/: tests.cpp
